@@ -5,6 +5,7 @@ Phoronix Test Suite (Git)
 pts-core: Add 'expat' as possible external dependency
 pts_Graph: Fix for displaying line graphs with very small values
 phodevi: Support reading sys.power via IPMI PS1_Input_Power/PS2_Input_Power
+pts-core: Improve MultiMatch in test result parser
 
 Phoronix Test Suite 8.8.1-Hvaler
 30 May 2019
